--- a/style.css
+++ b/style.css
@@ -1,3 +1,49 @@
 body {
-    background-color: #f4f4f4;
+    background-color:lightblue;
+    font-family: sans-serif;
+}
+#pokedex {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-row-gap: 30px;
+    padding-left: 0px;
+    width: 100%;
+    justify-items: center;
+    padding-top: 50px;
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 200px;
+    text-align: center;
+    background-color: white;
+}
+li {
+    list-style-type: none;
+}
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    cursor: pointer;
+} 
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
+}
+
+h2 {
+    text-transform: uppercase;
+    font-size: 17px;
+}
+
+p {
+    font-weight: lighter;
+    font-size: 15px;
+}
+
+img {
+    object-fit: cover;
+    height: 130px;
 }
