--- a/style.css
+++ b/style.css
@@ -27,6 +27,21 @@ li {
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     cursor: pointer;
+    animation: bounce 0.5s linear;
+}
+@keyframes bounce {
+    20% {
+        transform: translateY(-6px);
+    }
+    40% {
+        transform: translateY(0px);
+    }
+    60% {
+        transform: translateY(-2px);
+    }
+    80% {
+        transform: translateY(0px);
+    }
 } 
 /* Add some padding inside the card container */
 .container {
